--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ rust-version = "1.80"
 anyhow = "1.0.68"                                # error handling
 bytes = "1.3.0"                                  # helps manage buffers
 flate2 = "1.0.34"                                # compression
+sha1 = "0.10.6"
 thiserror = "1.0.38"                             # error handling
